--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
+html{
+  min-height: 100%;
+  background-image: url('./assets/golf\ course.jpg'), linear-gradient(rgba(0,0,0,0.4),rgba(0, 0, 0, 0.4));
+  background-blend-mode: overlay;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 .App {
   text-align: center;
+  color: #fff;
 }
 
 .App-logo {
@@ -7,32 +15,25 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+form {
+  max-width: 300px;
+  margin: auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+fieldset{
+  border: none;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 10px;
+  text-align: left;
 }
 
-.App-link {
-  color: #61dafb;
+.createBtn{
+  width: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.storedCourse{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  padding: 10px;
 }
